objects/HealthCloudGA__ContactContactRelation__c.object
<CustomObject>
    <description>A relationship between any two individuals.</description>
    <fields>
        <fullName>HealthCloudGA__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Contacts</relationshipLabel>
        <relationshipName>RelatedFromContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HealthCloudGA__InverseRelationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Uniquely identifies the relationship between Contact__c and RelatedContact__c so that it can be referenced by a trigger that creates the inverse relationship record.</description>
        <label>InverseRelationship</label>
        <referenceTo>HealthCloudGA__ContactContactRelation__c</referenceTo>
        <relationshipLabel>Contact Contact Relations</relationshipLabel>
        <relationshipName>ContactContactRelations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RelatedContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>RelatedToContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Role__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Role</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>HealthCloudGA__ReciprocalRole__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Contact Role</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>HealthCloudGA__ReciprocalRole__c</referenceTo>
        <relationshipName>ContactReciprocalRole</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__StartDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Contact-Contact Relationship</label>
    <listViews>
        <fullName>HealthCloudGA__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{000000000}</displayFormat>
        <label>Contact Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Contact Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>HealthCloudGA__CannotCreateInactiveRecord</fullName>
        <active>true</active>
        <description>Ensures that a record cannot be created as Inactive</description>
        <errorConditionFormula>AND(ISNEW(),HealthCloudGA__Active__c == false)</errorConditionFormula>
        <errorMessage>A Contact-Contact Relationship cannot be created as Inactive.</errorMessage>
    </validationRules>
</CustomObject>